# WatchDog-ESP32

./: .gitignore  CMakeLists.txt  README.md  git_initialisation.bat  main.cpp  sdkconfig  sdkconfig.old  sdkconfigtest
Drivers/: .clang-format
Drivers/ESP32_Camera/driver/: esp_camera.c
Drivers/ESP32_Camera/examples/main/: take_picture.c
Drivers/LibSerialPort/: libserialport_internal.h
Drivers/Watchdog/Inc/: camera.h  rtc.h  sd_card.h  uart_comms.h  wd_utils.h
Drivers/Watchdog/Src/: camera.c  led.c  rtc.c  sd_card.c  uart_comms.c  wd_utils.c
Drivers/stb_image/Inc/: stb_image.h
Drivers/stb_image/Src/: stb_image.c
ESP32/: sdkconfig  sdkconfig.old
ESP32/main/: CMakeLists.txt
ESP32/main/Inc/: hardware_config.h
ESP32/main/Src/: hardware_config.c  main.c
ESP32_CAM/: CMakeLists.txt  sdkconfig  sdkconfig.old
ESP32_CAM/Src/: hardware_config.c  main.c
ESP32_CAM/main/: CMakeLists.txt  Kconfig.projbuild
ESP32_CAM/main/Inc/: camera.h  esp32_uart.h  hardware_config.h  led.h  sd_card.h  watchdog_defines.h
ESP32_CAM/main/Inc/Board/: hardware_config.h  help.h
ESP32_CAM/main/Src/: camera.c  esp32_uart.c  hardware_config.c  led.c  main.c  sd_card.c
Interface/: MakeFile
Interface/Src/: main.c
Maple/: .clang-format  MakeFile  img002_230620_1317_1pp62.jpgg  logs.txt  quirks.txt
Maple/Discards/: com_ports.c  com_ports.h  com_ports1.c
Maple/Inc/: com_ports.h  gui.h  gui_utils.h  help.h  stb_image.h  stb_image_resize.h  unit_tests.h
Maple/Src/: com_ports.c  gui.c  gui_old.c  gui_utils.c  main.c  unit_tests.c
Maple/Unit_Tests/: MakeFile
Maple/Unit_Tests/Inc/: unit_tests.h
Maple/Unit_Tests/Src/: unit_tests.c
Maple_Test/: Makefile
Maple_Test/Inc/: gameSettings.h  maple.h
Maple_Test/Src/: main.cpp  maple.cpp
STM32/: .gitignore  Makefile  README.md  STM32L432KCUx_FLASH.ld  startup_stm32l432xx.s
STM32/Core/Inc/: board.h  comms.h  comms_stm32.h  led.h  led_config.h  main.h  main_donkey.h  watchdog.h  watchdog_utils.h
STM32/Core/Inc/Board/: hardware_config.h  help.h  stm32l4xx_hal_conf.h  stm32l4xx_hal_conf_original.h
STM32/Core/Inc/Interrupts/: stm32l4xx_it.h
STM32/Core/Inc/Utilities/: chars.h  log.h  stm32_rtc.h  utilities.h
STM32/Core/Src/: board.c  comms.c  comms_stm32.c  led.c  main.c  stm32l4xx_hal_msp.c  watchdog.c  watchdog_utils.c
STM32/Core/Src/Board/: hardware_config.c
STM32/Core/Src/Interrupts/: exti_interrupts.c  interrupts.c  stm32l4xx_it.c  timer_interrupts.c
STM32/Core/Src/Utilities/: chars.c  log.c  stm32_rtc.c  utilities.c
STM32/Discards/: comms.c  comms.h  debug_log.c  debug_log.h  watchdog_defines.c  watchdog_old.c  watchdog_utils.c  watchdog_utils.h
STM32/Drivers/STM32L4xx_HAL_Driver/Inc/: stm32l4xx_ll_usb.h
STM32/Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_hal_pcd.c
STM32/Drivers/USB/Inc/: usb_device.h
STM32/Drivers/USB/Src/: usb_device.c  usbd_cdc_if.c  usbd_conf.c  usbd_core.c
WD_Library/Inc/: watchdog_utils.h
WD_Library/Src/: watchdog_utils.c
main/: CMakeLists.txt  blink_example_main.c
main/Inc/: camera.h  hardware_config.h  led.h  sd_card.h  uart_comms.h  wd_utils.h
main/Src/: camera.c  led.c  main.c  rtc.c  sd_card.c  uart_comms.c  wd_utils.c
