idf_component_register(SRCS "Src/main.c"
                            "Src/hardware_config.c"
                            "Src/camera.c"
                            "Src/sd_card.c"
                            "Src/led.c"
                            "Src/esp32_uart.c"
                            "../../STM32/Core/Src/Utilities/chars.c"
                            "../../STM32/Library/Src/bpacket.c"
                            "../../Drivers/Watchdog/Src/uart_comms.c"
                            "../../Drivers/ESP32_Camera/driver/esp_camera.c"
                            "../../Drivers/ESP32_Camera/driver/sccb.c"
                            "../../Drivers/ESP32_Camera/driver/cam_hal.c"
                            "../../Drivers/ESP32_Camera/driver/sensor.c"
                            "../../Drivers/ESP32_Camera/sensors/ov2640.c"
                            "../../Drivers/ESP32_Camera/sensors/ov7725.c"
                            "../../Drivers/ESP32_Camera/sensors/ov7670.c"
                            "../../Drivers/ESP32_Camera/sensors/ov3660.c"
                            "../../Drivers/ESP32_Camera/sensors/ov5640.c"
                            "../../Drivers/ESP32_Camera/sensors/bf20a6.c"
                            "../../Drivers/ESP32_Camera/sensors/bf3005.c"
                            "../../Drivers/ESP32_Camera/sensors/gc032a.c"
                            "../../Drivers/ESP32_Camera/sensors/gc0308.c"
                            "../../Drivers/ESP32_Camera/sensors/gc2145.c"
                            "../../Drivers/ESP32_Camera/sensors/nt99141.c"
                            "../../Drivers/ESP32_Camera/sensors/sc030iot.c"
                            "../../Drivers/ESP32_Camera/sensors/sc031gs.c"
                            "../../Drivers/ESP32_Camera/sensors/sc101iot.c"
                            "../../Drivers/ESP32_Camera/target/esp32/ll_cam.c"
                            "../../Drivers/ESP32_Camera/target/xclk.c"
                    INCLUDE_DIRS "." 
                    "../../Drivers/ESP32_Camera/driver/include" 
                    "../../Drivers/ESP32_Camera/conversions/include" 
                    "../../Drivers/ESP32_Camera/driver/private_include"
                    "../../Drivers/ESP32_Camera/sensors/private_include"
                    "../../Drivers/ESP32_Camera/target/private_include"
                    "../../Drivers/Watchdog/Inc"
                    "../../STM32/Core/Inc/Utilities"
                    "../../STM32/Library/Inc"
                    "Inc/Board"
                    "Inc")
